規約情報参照APIのhandler実装、swaggerドキュメント修正
