# docs/swagger.yaml
@@ -2,8 +2,8 @@ basePath: /api/v0
 definitions:
   dto.AgreementPolicyRequest:
     properties:
-      policy_id:
-        description: 規約ID
+      policy_type:
+        description: 規約タイプ
         example: privacy_policy
         type: string
       version:
@@ -11,7 +11,7 @@ definitions:
         example: "1.4"
         type: string
     required:
-    - policy_id
+    - policy_type
     - version
     type: object
   dto.ContainerDetailItem:
@@ -188,6 +188,10 @@ definitions:
         description: 規約本文（改行文字入りテキスト）
         example: 第１条〜¥n第２条〜〜2026年9月30日
         type: string
+      effective_date:
+        description: 発効日（yyyy-mm-dd）
+        example: "2026-09-30"
+        type: string
       label:
         description: ラベル（表示名）
         example: 利用規約
@@ -196,22 +200,18 @@ definitions:
         description: 最新バージョン
         example: "1.2"
         type: string
-      policy_id:
-        description: 規約ID
+      policy_type:
+        description: 規約タイプ
         enum:
         - terms
         - privacy_policy
         type: string
-      update_date:
-        description: 更新日時（yyyy-mm-dd hh:MM:ss）
-        example: "2026-09-30 10:00:00"
-        type: string
     required:
     - content
+    - effective_date
     - label
     - latest_version
-    - policy_id
-    - update_date
+    - policy_type
     type: object
   dto.GetRecordResponse:
     properties:
@@ -485,8 +485,8 @@ definitions:
         description: 最新バージョン
         example: "1.2"
         type: string
-      policy_id:
-        description: 規約ID
+      policy_type:
+        description: 規約タイプ
         example: privacy_policy
         type: string
       status:
@@ -499,7 +499,7 @@ definitions:
     - agreed_version
     - label
     - latest_version
-    - policy_id
+    - policy_type
     - status
     type: object
   dto.UserLoginResponse:
@@ -539,7 +539,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: 指定された規約情報を１件返却する。規約本文は改行文字入りのテキストとなる。
+      description: 指定された規約について、最新版の情報を１件返却する。規約本文は改行文字入りのテキストとなる。
       produces:
       - application/json
       responses:
@@ -555,7 +555,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
-      summary: '[GEN-API-001] ユーザ規約参照'
+      summary: '[GEN-API-001] 規約情報参照'
       tags:
       - policies
   /records:
