# internal/handler/params.go
@@ -1,0 +1,5 @@
+package handler
+
+const (
+	ParamPolicyId = "policy_id"
+)
