# internal/usecase/general_dto.go
@@ -1,5 +1,17 @@
 package usecase
 
-type GetPoliciesInput struct{}
+import "time"
 
-type GetPoliciesOutput struct{}
+// 規約取得Usecase Input
+type GetPoliciesInput struct {
+	PolicyType string
+}
+
+// 規約取得Usecase Output
+type GetPoliciesOutput struct {
+	PolicyType    string
+	Label         string
+	LatestVersion string
+	EffectiveDate time.Time
+	Content       string
+}
